upgrading for Java 11